# sc21jjk

./: CMakeLists.txt  README.md  camera.txt  imgui.ini  list.txt
CMake Subfolders/GLAD CMake/: CMakeLists.txt
CMake Subfolders/ImGui CMake/: CMakeLists.txt
CMake Subfolders/ImPlot CMake/: CMakeLists.txt
CMake Subfolders/SDL2Mixer CMake/: CMakeLists.txt
Include/: buffer.h  camera.h  mesh.h  model.h  screenQuad.h  shaderLoader.h  shader_fxaa.h  shader_mlaa.h  shader_smaa.h  shader_taa.h  texture.h  utilityMap.h  varsettings.h  window.h
Shaders/: depth.frag  diff.frag  screen.frag  ssaa.frag  ssaa.vert
Shaders/cmaa/: cmaa.hlsl
Shaders/fxaa/: Fxaa3_11.h  fxaa_glsl.h
Shaders/lighting/: blinn.frag  blinn.vert  flat.frag  flat.vert  pbr.frag
Shaders/mlaa/: MLAA.h  mlaa1.frag  mlaa2.frag  mlaa3.frag  mlaaScreen.vert  mlaa_glsl.h
Shaders/smaa/: SMAA.h  smaa1.frag  smaa1.vert  smaa2.frag  smaa2.vert  smaa3.frag  smaa3.vert  smaa_glsl.h
Shaders/taa/: taa3.vert
Source/: createChart.py  cropImage.py  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
